--- a/index.html
+++ b/index.html
@@ -1,20 +1,117 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
 
   <title>Train Schedule</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
+    crossorigin="anonymous">
 
 
 </head>
 
 <body>
+  <div class="jumbotron bg-secondary">
+    <h1 class="display-4">Train schedule</h1>
+    <p class="lead">Add trains and find out when the next one is coming.</p>
+  </div>
+
+  <div class="row">
+
+    <div class="col-lg-12">
+
+      <!-- Current Employees-->
+      <div class="card ">
+        <div class="card-header bg-dark text-white">
+          <strong>Current Employees</strong>
+
+        </div>
+        <div class="card-body bg-secondary text-white">
+          <table class="table table-hover" id='train-table'>
+            <thead>
+              <tr>
+                <th>Train name</th>
+                <th>Destination</th>
+                <th>Frequency (min)</th>
+                <th>Next arrival</th>
+                <th>Minutes away</th>
+              </tr>
+            </thead>
+            <tbody>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+
+    <div class="col-lg-12">
+
+
+      <!-- Add Employee  -->
+      <div class="card card-dark mt-4">
+        <div class="card-header bg-dark text-white">
+          <strong>Add Employee</strong>
+        </div>
+        <div class="card-body">
+
+          <!-- Entry Form -->
+          <form>
+            <div class="form-group row">
+              <label for="train-name-input">Train Name</label>
+              <input class="form-control" id="train-name-input" type="text">
+            </div>
+            <div class="form-group row">
+              <label for="destination-input">Destination</label>
+              <input class="form-control" id="destination-input" type="text">
+            </div>
+            <div class="form-group row">
+              <label for="first-train-input">First train time (HH:mm Military Time)</label>
+              <input class="form-control" id="first-train-input" type="text">
+            </div>
+            <div class="form-group row">
+              <label for="frequency-input">Frequency (min)</label>
+              <input class="form-control" id="frequency-input" type="text">
+            </div>
+            <button class="btn btn-dark" id="add-train-btn" type="submit">Submit</button>
+          </form>
+
+        </div>
+
+      </div>
+
+    </div>
+
+  </div>
+
+  </div>
+
+
+
+  <script src="https://www.gstatic.com/firebasejs/5.0.4/firebase.js"></script>
+  <script>
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyBx6Z8yhkUQOayyc88opIn_WJyFmMnX0XU",
+      authDomain: "trf-trains.firebaseapp.com",
+      databaseURL: "https://trf-trains.firebaseio.com",
+      projectId: "trf-trains",
+      storageBucket: "trf-trains.appspot.com",
+      messagingSenderId: "413751062360"
+    };
+    firebase.initializeApp(config);
+  </script>
   <script src="assets/trains.js"></script>
   <script src="/assets/moment.js"></script>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
