--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 
     <div class="col-lg-12">
 
-      <!-- Current Employees-->
+      <!-- Schedule-->
       <div class="card ">
         <div class="card-header bg-dark text-white">
-          <strong>Current Employees</strong>
+          <strong>Train schedule</strong>
 
         </div>
         <div class="card-body bg-secondary text-white">
@@ -40,6 +40,12 @@
               </tr>
             </thead>
             <tbody>
+              <th id="train-display"></th>
+              <th id="destination-display"></th>
+              <th id="frequency-display"></th>
+              <th id="next-arrival-display"></th>
+              <th id="minutes-away-display"></th>
+              <th></th>
             </tbody>
           </table>
         </div>
@@ -51,10 +57,10 @@
     <div class="col-lg-12">
 
 
-      <!-- Add Employee  -->
+      <!-- Add Train  -->
       <div class="card card-dark mt-4">
         <div class="card-header bg-dark text-white">
-          <strong>Add Employee</strong>
+          <strong>Add Train</strong>
         </div>
         <div class="card-body">
 
@@ -76,7 +82,7 @@
               <label for="frequency-input">Frequency (min)</label>
               <input class="form-control" id="frequency-input" type="text">
             </div>
-            <button class="btn btn-dark" id="add-train-btn" type="submit">Submit</button>
+            <button class="btn btn-dark" id="add-train-btn" type="submit">Add Train</button>
           </form>
 
         </div>
@@ -89,25 +95,22 @@
 
   </div>
 
-
-
   <script src="https://www.gstatic.com/firebasejs/5.0.4/firebase.js"></script>
   <script>
     // Initialize Firebase
     var config = {
-      apiKey: "AIzaSyBx6Z8yhkUQOayyc88opIn_WJyFmMnX0XU",
-      authDomain: "trf-trains.firebaseapp.com",
-      databaseURL: "https://trf-trains.firebaseio.com",
-      projectId: "trf-trains",
-      storageBucket: "trf-trains.appspot.com",
-      messagingSenderId: "413751062360"
+      apiKey: "AIzaSyAfm3wHWX-OccnP9YnDZtVeYuHJ5j4AbO0",
+      authDomain: "tfr-trains.firebaseapp.com",
+      databaseURL: "https://tfr-trains.firebaseio.com",
+      projectId: "tfr-trains",
+      storageBucket: "tfr-trains.appspot.com",
+      messagingSenderId: "972171190359"
     };
     firebase.initializeApp(config);
-  </script>
-  <script src="assets/trains.js"></script>
-  <script src="/assets/moment.js"></script>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+  </script>  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
+    <script src="assets/trains.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ"
     crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
