figuring out nextTrain issue

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="card-body">
 
           <!-- Entry Form -->
-          <form>
+          <form id = "train-schedule">
             <div class="form-group row">
               <label for="train-name-input">Train Name</label>
               <input class="form-control" id="train-name-input" type="text">
