--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Train Schedule</title>
+  <title>Train Scheduler</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
     crossorigin="anonymous">
-
+<link rel="stylesheet" href="assets/styles.css">
 
 </head>
 
@@ -40,11 +40,11 @@
               </tr>
             </thead>
             <tbody>
-              <th id="train-display"></th>
-              <th id="destination-display"></th>
-              <th id="frequency-display"></th>
-              <th id="next-arrival-display"></th>
-              <th id="minutes-away-display"></th>
+              <th id="train-display"><span class="train"></span></th>
+              <th id="destination-display"><span class="destination"></span></th>
+              <th id="frequency-display"><span class="frequency"></span></th>
+              <th id="next-arrival-display"><span class="next"></span></th>
+              <th id="minutes-away-display"><span class="away"></span></th>
               <th></th>
             </tbody>
           </table>
