got rid of some junk

--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
               </tr>
             </thead>
             <tbody>
-              <th id="train-display"><span class="train"></span></th>
-              <th id="destination-display"><span class="destination"></span></th>
-              <th id="frequency-display"><span class="frequency"></span></th>
-              <th id="next-arrival-display"><span class="next"></span></th>
-              <th id="minutes-away-display"><span class="away"></span></th>
-              <th></th>
+              <td id="train-display"><span class="train"></span></td>
+              <td id="destination-display"><span class="destination"></span></td>
+              <td id="frequency-display"><span class="frequency"></span></td>
+              <td id="next-arrival-display"><span class="next"></span></td>
+              <td id="minutes-away-display"><span class="away"></span></td>
+              <td></td>
             </tbody>
           </table>
         </div>
