--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         </div>
         <div class="card-body bg-secondary text-white">
-          <table class="table table-hover" id='train-table'>
+          <table class="table table-hover">
             <thead>
               <tr>
                 <th>Train name</th>
@@ -39,13 +39,15 @@
                 <th>Minutes away</th>
               </tr>
             </thead>
-            <tbody>
-              <td id="train-display"><span class="train"></span></td>
-              <td id="destination-display"><span class="destination"></span></td>
-              <td id="frequency-display"><span class="frequency"></span></td>
-              <td id="next-arrival-display"><span class="next"></span></td>
-              <td id="minutes-away-display"><span class="away"></span></td>
-              <td></td>
+            <tbody id='train-table'>
+              <tr>
+                  <td id="train-display"><span class="train"></span></td>
+                  <td id="destination-display"><span class="destination"></span></td>
+                  <td id="frequency-display"><span class="frequency"></span></td>
+                  <td id="next-arrival-display"><span class="next"></span></td>
+                  <td id="minutes-away-display"><span class="away"></span></td>
+                  <td></td>
+              </tr>
             </tbody>
           </table>
         </div>
